Fixed alignment  in tab and header

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ font-family: 'Bree Serif', serif;
 color:turquoise;
 letter-spacing: 1.5px;
 font-size: 40px;
+padding: 130px 0;
 }
 
 p
@@ -42,7 +43,7 @@ p
     text-align: center;
     padding: 0px;
     margin: 0 auto;
-    width: 800px;
+    max-width: 800px;
 }
 
 .list-nav li{
@@ -124,7 +125,7 @@ font-family: 'Bree Serif', serif;
 color:rgb(243, 219, 248);
 letter-spacing: 1.5px;
 font-size: 40px;
-margin: 0  50px;
+margin: 0  10px;
 }
 p
 {
